--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        
 
             <div class="hello-text">
-                <h3 id="dynamic-time"></h3>
+                <div id="dynamic-time"></div>
                 <h1 class="introduction">Hello world 👋,<br>I'm glad you found my address 📍!</h1>
             </div>
 
