Horizontal scroll semi fixed + added reflection section

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
 
         <!-- about me section -->
-         <section class="aboutMe" id="aboutMe">
+         <div class="aboutMe" id="aboutMe">
         <div class="blurEffect"> </div>
         <div class="about-container">
 
@@ -98,8 +98,8 @@
 
         <div class="backToTop"></div>
         
-    </section>
-        <div class="footer"></div>
+    </div>
+        <div class="footerPlaceholder"></div>
     </div>
         
     </div>
