--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
                 <h1>About Me</h1>
             </div>
             <div class="about-content">
-                <h2>I am an aspiring a multidimensional creator with a passion for weaving magic through pixels and circuits. 
+                <h2>I am an aspiring a multidimensional creator with a passion for promoting interactions through pixels and circuits. 
                 </h2>
                 <p id="about-paragraph">
-                    Hi again, I am Carla Budar, currently studying Design and Technology in Parsons School of Design. I am passionate about blending technology and creativity to build meaningful, intuitive, and engaging experiences, focusing equally on functionality and aesthetics. Whether it's developing dynamic web experiences, experimenting with interactive technology, or modeling innovative products, I make sure to maintain a streamlined design approach. I believe good design should be both smart and fun—striking the right balance between practicality and play.
+                    Hi again, I am Carla Budar, currently studying Design and Technology in Parsons School of Design. I am enthusiastic about using technology and creativity as tools for building fun, intuitive, and engaging experiences. Whether it's developing dynamic web experiences, experimenting with interactive technology, or modeling innovative products, I aim to maintain a streamlined design approach. I believe, good designs should be both fresh, exciting, yet  user-friendly; striking the right balance between practicality and play.
                 </p>
                 <h2>My Toolkit</h2>
                 <div id="skills">
@@ -117,7 +117,13 @@
                             HTML/CSS, JavaScript, Typescript, Physical computing (Arduino), C++, Python, C#</p>
                     </div>
                 </div>
-                <img src="assets/headshot 2024.png" alt="Profile picture" id="profilePic">
+                <div id="profile">
+                    <img src="assets/headshot2025.jpg" 
+                    alt="Profile picture" id="profilePic">
+                    <p id="photoCaption">Me hiking in Upstate New York last Winter</p>
+
+                </div>
+             
             </div>
             
 
